[workspace]
resolver = "2"
members = ["open-f1-client", "open-f1-cleint-macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
const_format = "0.2.34"
chrono = "0.4.40"
proc-macro2 = "1.0.95"
quote = "1.0.40"
reqwest = "0.12.15"
serde = "1.0.219"
syn = "2.0.100"
thiserror = "2.0.12"
tokio = "1.44.2"
